--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,10 @@
 <div class="header-container">
     <header>
         <nav class="navbar navbar-expand-lg">
-            <a class="logo" href="">
-                <img src="/images/Yo.jpg" alt="100px" width="100px">
+            <a class="logo col-4 col-lg-2" href="">
+                <img src="/images/Logo.PNG" alt="150px" width="180px">
             </a>
-            <div class="search">
+            <div class="search col-8 col-lg-5">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Buscar proyectos" aria-label="Recipient's username" aria-describedby="button-addon2">
                     <div class="input-group-append">
