--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
-<footer>
-    <h1>Chau</h1>
-</footer>
+<div class="footer-container">
+    <footer>
+        <h1>Footer</h1>
+    </footer>
+</div>
