--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,16 @@
 <div class="footer-container">
     <footer>
-        <h1>Footer</h1>
+        <div class="footer footer-row">
+            <ul class="contact">
+                <li class="col-2 col-sm-2"><a href=""><i class="fab fa-whatsapp fa-2x"></i></a></li>
+                <li class="col-2 col-sm-2"><a href=""><i class="fab fa-instagram fa-2x"></i></a></li>
+                <li class="col-2 col-sm-2"><a href=""><i class="fab fa-facebook-f fa-2x"></i></a></li>
+                <li class="col-2 col-sm-2"><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
+                <li class="col-2 col-sm-2"><a href=""><i class="fas fa-envelope fa-2x"></i></a></li>
+            </ul>
+        </div>
     </footer>
+    <div class="sub-footer">
+        <p>Copyright © 2020 ʻOihana</p>
+    </div>
 </div>
