--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,143 @@
       <%- include('partials/head') %>
 <body>
-  <div>
+  
+  <%- include('partials/header') %>  
+    <div class="body">
+        <div class="container">
+            <div class="carousel-container">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-70" src="images/CocaCola.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-70" src="images/McDonalds.jpg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-70" src="images/Quilmes.jpg" alt="Third slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-70" src="images/Amazon.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="articles-container">
+                <div class="row articulos">
+                    <section class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="article-box">
+                            <a href="">
+                                <img src="images/Amazon.jpg" alt="imagen producto" class="imagen-producto">
+                                <div class="article-data">
+                                    <h3>Amazon</h3>
+                                </div>
+                            </a>
+                            <p>Tienda en Internet.</p>
+                        </div>
+                    </section>
+                    <section class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="article-box">
+                            <a href="">
+                                <img src="images/Quilmes.jpg" alt="imagen producto" class="imagen-producto">
+                                <div class="article-data">
+                                    <h3>Quilmes</h3>
+                                </div>
+                            </a>
+                            <p>Cervecería.</p>
+                        </div>
+                    </section>
+                    <section class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="article-box">
+                            <a href="">
+                                <img src="images/McDonalds.jpg" alt="imagen producto" class="imagen-producto">
+                                <div class="article-data">
+                                    <h3>Mc Donald's</h3>
+                                </div>
+                            </a>
+                            <p>Restaurantes de servicio rápido.</p>
+                        </div>
+                    </section>
+                    <section class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="article-box">
+                            <a href="">
+                                <img src="images/CocaCola.jpg" alt="imagen producto" class="imagen-producto">
+                                <div class="article-data">
+                                    <h3>Coca-Cola</h3>
+                                </div>
+                            </a>
+                            <p>Compañia de bebidas.</p>
+                        </div>
+                    </section>
+                    <section class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="article-box">
+                            <a href="">
+                                <img src="images/Amazon.jpg" alt="imagen producto" class="imagen-producto">
+                                <div class="article-data">
+                                    <h3>Amazon</h3>
+                                </div>
+                            </a>
+                            <p>Tienda en Internet.</p>
+                        </div>
+                    </section>
+                    <section class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="article-box">
+                            <a href="">
+                                <img src="images/CocaCola.jpg" alt="imagen producto" class="imagen-producto">
+                                <div class="article-data">
+                                    <h3>Coca-Cola</h3>
+                                </div>
+                            </a>
+                            <p>Compañia de bebidas.</p>
+                        </div>
+                    </section>
+                    <section class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="article-box">
+                            <a href="">
+                                <img src="images/McDonalds.jpg" alt="imagen producto" class="imagen-producto">
+                                <div class="article-data">
+                                    <h3>Mc Donald's</h3>
+                                </div>
+                            </a>
+                            <p>Restaurantes de servicio rápido.</p>
+                        </div>
+                    </section>
+                    <section class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="article-box">
+                            <a href="">
+                                <img src="images/Quilmes.jpg" alt="imagen producto" class="imagen-producto">
+                                <div class="article-data">
+                                    <h3>Quilmes</h3>
+                                </div>
+                            </a>
+                            <p>Cervecería</p>
+                        </div>
+                    </section>
+                    <section class="col-sm-12 col-md-6 col-lg-4">
+                        <div class="article-box">
+                            <a href="">
+                                <img src="images/Amazon.jpg" alt="imagen producto" class="imagen-producto">
+                                <div class="article-data">
+                                    <h3>Amazon</h3>
+                                </div>
+                            </a>
+                            <p>Tienda en Internet.</p>
+                        </div>
+                    </section>
+                </div>
+                <div class="button-container">
+                    <button type="button" class="btn btn-primary">Ver más</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <%- include('partials/header') %>
-      
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-      
-    <%- include('partials/footer') %>
-    
-  </div>
+  <%- include('partials/footer') %> 
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
