--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,10 +1,10 @@
 <div class="header-container">
     <header>
         <nav class="navbar navbar-expand-lg">
-            <a class="logo col-4 col-lg-2" href="">
+            <a class="logo col-12 col-sm-5 col-md-5 col-lg-3 col-xl-2" href="">
                 <img src="/images/Logo.PNG" alt="150px" width="180px">
             </a>
-            <div class="search col-8 col-lg-5">
+            <div class="search col-9 col-sm-5 col-md-5 col-lg-3 col-xl-4">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Buscar proyectos" aria-label="Recipient's username" aria-describedby="button-addon2">
                     <div class="input-group-append">
@@ -14,7 +14,7 @@
                     </div>
                 </div>
             </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler col-3 col-sm-2 col-md-2 col-lg-5 col-xl-6" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -34,34 +34,5 @@
                 </ul>
             </div>
         </nav>
-        <!--
-        <div class="header">
-            <div class="logo">
-                <a href="index.ejs">
-                   <img src="" alt="">Logo
-                </a>
-            </div>
-            <div class="search">
-                BUSCAR
-            </div>
-            <div class="need-sponsor">
-               <a href="">
-                   Subir un emprendimiento
-               </a> 
-            </div>
-            <div class="be-sponsor">
-                <a href="">
-                    Hacer un aporte
-                </a>
-            </div>
-            <div class="login">
-                <a href="login.ejs">
-                    Ingresar
-                </a>
-                <a href="register.ejs">
-                    Crear Cuenta
-                </a>
-            </div>
-        </div> -->
     </header>
 </div>
