--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,13 @@
-      <%- include('partials/head') %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <%- include('partials/head') %>
+    <link rel="stylesheet" href="/stylesheets/index.css">
+</head>
 <body>
-  
-  <%- include('partials/header') %>  
+    
+    <%- include('partials/header') %>  
+
     <div class="body">
         <div class="container">
             <div class="carousel-container">
@@ -28,105 +34,105 @@
                     </div>
                 </div>
             </div>
-            <div class="articles-container">
-                <div class="row articulos">
+            <div class="proyects-container">
+                <div class="row proyectos">
                     <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="article-box">
+                        <div class="proyect-box">
                             <a href="">
                                 <img src="images/Amazon.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="article-data">
-                                    <h3>Amazon</h3>
+                                <div class="proyect-data">
+                                    <h1>Amazon</h1>
                                 </div>
                             </a>
-                            <p>Tienda en Internet.</p>
+                            <h5>Tienda en Internet.</h5>
                         </div>
                     </section>
                     <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="article-box">
+                        <div class="proyect-box">
                             <a href="">
                                 <img src="images/Quilmes.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="article-data">
-                                    <h3>Quilmes</h3>
+                                <div class="proyect-data">
+                                    <h1>Quilmes</h1>
                                 </div>
                             </a>
-                            <p>Cervecería.</p>
+                            <h5>Cervecería.</h5>
                         </div>
                     </section>
                     <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="article-box">
+                        <div class="proyect-box">
                             <a href="">
                                 <img src="images/McDonalds.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="article-data">
-                                    <h3>Mc Donald's</h3>
+                                <div class="proyect-data">
+                                    <h1>Mc Donald's</h1>
                                 </div>
                             </a>
-                            <p>Restaurantes de servicio rápido.</p>
+                            <h5>Restaurantes de servicio rápido.</h5>
                         </div>
                     </section>
                     <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="article-box">
+                        <div class="proyect-box">
                             <a href="">
                                 <img src="images/CocaCola.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="article-data">
-                                    <h3>Coca-Cola</h3>
+                                <div class="proyect-data">
+                                    <h1>Coca-Cola</h1>
                                 </div>
                             </a>
-                            <p>Compañia de bebidas.</p>
+                            <h5>Compañia de bebidas.</h5>
                         </div>
                     </section>
                     <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="article-box">
+                        <div class="proyect-box">
                             <a href="">
                                 <img src="images/Amazon.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="article-data">
-                                    <h3>Amazon</h3>
+                                <div class="proyect-data">
+                                    <h1>Amazon</h1>
                                 </div>
                             </a>
-                            <p>Tienda en Internet.</p>
+                            <h5>Tienda en Internet.</h5>
                         </div>
                     </section>
                     <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="article-box">
+                        <div class="proyect-box">
                             <a href="">
                                 <img src="images/CocaCola.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="article-data">
-                                    <h3>Coca-Cola</h3>
+                                <div class="proyect-data">
+                                    <h1>Coca-Cola</h1>
                                 </div>
                             </a>
-                            <p>Compañia de bebidas.</p>
+                            <h5>Compañia de bebidas.</h5>
                         </div>
                     </section>
                     <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="article-box">
+                        <div class="proyect-box">
                             <a href="">
                                 <img src="images/McDonalds.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="article-data">
-                                    <h3>Mc Donald's</h3>
+                                <div class="proyect-data">
+                                    <h1>Mc Donald's</h1>
                                 </div>
                             </a>
-                            <p>Restaurantes de servicio rápido.</p>
+                            <h5>Restaurantes de servicio rápido.</h5>
                         </div>
                     </section>
                     <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="article-box">
+                        <div class="proyect-box">
                             <a href="">
                                 <img src="images/Quilmes.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="article-data">
-                                    <h3>Quilmes</h3>
+                                <div class="proyect-data">
+                                    <h1>Quilmes</h1>
                                 </div>
                             </a>
-                            <p>Cervecería</p>
+                            <h5>Cervecería</h5>
                         </div>
                     </section>
                     <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="article-box">
+                        <div class="proyect-box">
                             <a href="">
                                 <img src="images/Amazon.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="article-data">
-                                    <h3>Amazon</h3>
+                                <div class="proyect-data">
+                                    <h1>Amazon</h1>
                                 </div>
                             </a>
-                            <p>Tienda en Internet.</p>
+                            <h5>Tienda en Internet.</h5>
                         </div>
                     </section>
                 </div>
@@ -136,12 +142,12 @@
             </div>
         </div>
     </div>
+    
+    <%- include('partials/footer') %> 
 
-  <%- include('partials/footer') %> 
-
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 </html>
