--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -6,10 +6,11 @@
 }
 .d-block {
     margin: auto;
+    height: auto;
 }
 
 /* Productos */
-.article-box {
+.proyect-box {
     background-color: #ffffff;
     border-radius: 5px;
     overflow: hidden;
@@ -18,7 +19,7 @@
     
 }
 
-.article-data {
+.proyect-data {
     padding: 15px;
 }
 
@@ -26,11 +27,11 @@
     width: 100%;
 }
 
-.article-data h3 {
+.proyect-data h1 {
     text-align: center;
 }
 
-.article-box p {
+.proyect-box h5 {
     text-align: center;
 }
 
