--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,112 +34,9 @@
                     </div>
                 </div>
             </div>
-            <div class="proyects-container">
-                <div class="row proyectos">
-                    <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="proyect-box">
-                            <a href="">
-                                <img src="images/Amazon.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="proyect-data">
-                                    <h1>Amazon</h1>
-                                </div>
-                            </a>
-                            <h5>Tienda en Internet.</h5>
-                        </div>
-                    </section>
-                    <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="proyect-box">
-                            <a href="">
-                                <img src="images/Quilmes.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="proyect-data">
-                                    <h1>Quilmes</h1>
-                                </div>
-                            </a>
-                            <h5>Cervecería.</h5>
-                        </div>
-                    </section>
-                    <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="proyect-box">
-                            <a href="">
-                                <img src="images/McDonalds.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="proyect-data">
-                                    <h1>Mc Donald's</h1>
-                                </div>
-                            </a>
-                            <h5>Restaurantes de servicio rápido.</h5>
-                        </div>
-                    </section>
-                    <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="proyect-box">
-                            <a href="">
-                                <img src="images/CocaCola.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="proyect-data">
-                                    <h1>Coca-Cola</h1>
-                                </div>
-                            </a>
-                            <h5>Compañia de bebidas.</h5>
-                        </div>
-                    </section>
-                    <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="proyect-box">
-                            <a href="">
-                                <img src="images/Amazon.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="proyect-data">
-                                    <h1>Amazon</h1>
-                                </div>
-                            </a>
-                            <h5>Tienda en Internet.</h5>
-                        </div>
-                    </section>
-                    <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="proyect-box">
-                            <a href="">
-                                <img src="images/CocaCola.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="proyect-data">
-                                    <h1>Coca-Cola</h1>
-                                </div>
-                            </a>
-                            <h5>Compañia de bebidas.</h5>
-                        </div>
-                    </section>
-                    <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="proyect-box">
-                            <a href="">
-                                <img src="images/McDonalds.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="proyect-data">
-                                    <h1>Mc Donald's</h1>
-                                </div>
-                            </a>
-                            <h5>Restaurantes de servicio rápido.</h5>
-                        </div>
-                    </section>
-                    <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="proyect-box">
-                            <a href="">
-                                <img src="images/Quilmes.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="proyect-data">
-                                    <h1>Quilmes</h1>
-                                </div>
-                            </a>
-                            <h5>Cervecería</h5>
-                        </div>
-                    </section>
-                    <section class="col-sm-12 col-md-6 col-lg-4">
-                        <div class="proyect-box">
-                            <a href="">
-                                <img src="images/Amazon.jpg" alt="imagen producto" class="imagen-producto">
-                                <div class="proyect-data">
-                                    <h1>Amazon</h1>
-                                </div>
-                            </a>
-                            <h5>Tienda en Internet.</h5>
-                        </div>
-                    </section>
-                </div>
-                <div class="button-container">
-                    <button type="button" class="btn btn-primary">Ver más</button>
-                </div>
-            </div>
+
+            <%- include('partials/proyects') %> 
+            
         </div>
     </div>
     
