--- a/views/proyectDetail.ejs
+++ b/views/proyectDetail.ejs
@@ -9,7 +9,7 @@
     <%- include('partials/header') %>
 
     <div class="body">
-        <div class="producto">
+        <div class="proyecto">
             <div class="image">
                 <img src="/images/CocaCola.jpg">
             </div>
