--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,10 +2,10 @@
     <footer>
         <div class="footer footer-row">
             <ul class="contact">
-                <li class="col-2 col-sm-2"><a href=""><i class="fab fa-whatsapp fa-2x"></i></a></li>
-                <li class="col-2 col-sm-2"><a href=""><i class="fab fa-instagram fa-2x"></i></a></li>
-                <li class="col-2 col-sm-2"><a href=""><i class="fab fa-facebook-f fa-2x"></i></a></li>
-                <li class="col-2 col-sm-2"><a href=""><i class="fas fa-envelope fa-2x"></i></a></li>
+                <li class="col-2 col-sm-2"><a href="tel:1553283543"><i class="fas fa-mobile-alt fa-2x"></i></i></a></li>
+                <li class="col-2 col-sm-2"><a href="https://www.instagram.com/estanislaocasas/"><i class="fab fa-instagram fa-2x"></i></a></li>
+                <li class="col-2 col-sm-2"><a href="https://www.facebook.com/estanicasas"><i class="fab fa-facebook-f fa-2x"></i></a></li>
+                <li class="col-2 col-sm-2"><a href="mailto:estanicasas@gmail.com"><i class="fas fa-envelope fa-2x"></i></a></li>
             </ul>
         </div>
     </footer>
