--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <div class="header-container">
     <header>
         <nav class="navbar navbar-expand-lg">
-            <a class="logo col-12 col-sm-5 col-md-5 col-lg-3 col-xl-2" href="">
+            <a class="logo col-12 col-sm-5 col-md-5 col-lg-3 col-xl-2" href="/">
                 <img src="/images/Logo.PNG" alt="150px" width="180px">
             </a>
             <div class="search col-9 col-sm-5 col-md-5 col-lg-3 col-xl-5">
@@ -20,16 +20,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Subir un proyecto</a>
+                        <a class="nav-link" href="/proyects/add">Subir un proyecto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Hacer un aporte</a>
+                        <a class="nav-link" href="/proyects">Hacer un aporte</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Ingresar</a>
+                        <a class="nav-link" href="/users/login">Ingresar</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Crear una cuenta</a>
+                        <a class="nav-link" href="/users/register">Crear una cuenta</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/proyects/cart"><i class="fas fa-shopping-cart"></i></a>
                     </li>
                 </ul>
             </div>
