--- a/views/proyectDetail.ejs
+++ b/views/proyectDetail.ejs
@@ -17,6 +17,7 @@
                 <h1>Coca-Cola</h1>
                 <h4>Tienda de Bebidas</h4>
                 <h5>Somos un grupo de amigos, los cuales queremos empezar un nuevo emprendimiento. Queremos fundar una empresa de venta de bebidas sin alcohol.</h5>
+                <p>Dinero a recaudar: $500.000</p>
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
                     Progreso
