--- a/public/stylesheets/proyectDetail.css
+++ b/public/stylesheets/proyectDetail.css
@@ -60,3 +60,10 @@ h5 {
     border: 2px solid blue;
     background-color: white;
 }
+
+p {
+    font-weight: bold;
+    padding-bottom: 10px;
+    margin: 0px;
+    text-align: center;
+}
