--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,8 +25,9 @@
                 </div>
               </div>
               <div class="form-group row">
-                <div class="col-sm-10">
+                <div class="col-sm-12">
                   <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                  ¿No tienes una cuenta? <a href="/users/register">Resgistrarse</a>
                 </div>
               </div>
             </form>
