--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,9 +14,7 @@
                     </div>
                 </div>
             </div>
-            <button class="navbar-toggler col-3 col-sm-2 col-md-2 col-lg-5 col-xl-5" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars"></i>
-            </button>
+            <button class="navbar-toggler col-3 col-sm-2 col-md-2 col-lg-6 col-xl-5" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><i class="fas fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -30,9 +28,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/users/register">Crear una cuenta</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/proyects/cart"><i class="fas fa-shopping-cart"></i></a>
                     </li>
                 </ul>
             </div>
